<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" >

        <ImageView
            android:id="@+id/thumbnailHd"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/colorPrimary"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold"
            cardview:layout_constraintTop_toBottomOf="@id/thumbnailHd" />

        <TextView
            android:id="@+id/writer"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/writer"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            cardview:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/prices"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            cardview:layout_constraintLeft_toLeftOf="parent"
            cardview:layout_constraintRight_toRightOf="parent"
            cardview:layout_constraintTop_toBottomOf="@+id/writer">

            <TextView
                android:id="@+id/mainTxtPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/mainTxtPrice"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                cardview:layout_constraintRight_toLeftOf="@+id/price" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/price"
                android:textSize="15sp"
                android:textStyle="bold"
                cardview:layout_constraintLeft_toRightOf="@id/mainTxtPrice" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="125dp"
            android:layout_height="match_parent"
            cardview:layout_constraintTop_toBottomOf="@id/prices"
            cardview:layout_constraintLeft_toLeftOf="parent"
            cardview:layout_constraintRight_toRightOf="parent"
            android:id="@+id/btnComprar"
            android:text="@string/comprar" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>