<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="LojaModel"
            type="dev.ferrazpedro.livebooks2.ui.loja.LojaViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.loja.LojaActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/barraTopo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/app_name"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent" />


            <TextView
                android:id="@+id/saldoMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/creditoTotal"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/saldo"
                android:textSize="25sp"
                app:layout_constraintRight_toLeftOf="@id/saldoMenu" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>
</layout>